# cookiecutter-pyproject-setuptools

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: pyproject.toml  setup.cfg
