[metadata]
name = {{ cookiecutter.project_name }}
version = 0.1.0
description = {{ cookiecutter.project_description }}
long_description = file: {{ cookiecutter.project_long_description_file }}

[options]
zip_safe = True
python_requires = {{ cookiecutter.python_requires }}
{%- if cookiecutter.project_type == "module" %}
py_modules = src/{{ cookiecutter.python_src_root }}.py
{%- else %}
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
{%- endif %}

[options.extras_require]
dev =
    black
    flake8
    isort
    {%- if cookiecutter.include_mypy == "yes" %}
    mypy
    {%- endif %}
    python-language-server

[flake8]
; These properties are taken care of by black
; E501: line too long
; E203: whitespace before ':'
extend-ignore = E501,E203
